[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paystack-api-wrapper"
version = "0.1.1"
description = "Modern, test-driven Python client for the Paystack API — built to save you time integrating into Python projects."
authors = [
    {name = "Joseph Ezekiel", email = "theolujay@gmail.com"},
]
maintainers = [
    {name = "Joseph Ezekiel", email = "theolujay@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["paystack", "payment", "api", "python", "fintech", "nigeria"]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "responses>=0.25.8",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest-mock>=3.14.1",
]
test = [
    "pytest>=8.4.1", 
    "responses>=0.25.8",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.1",
]

[project.urls]
Homepage = "https://github.com/theolujay/paystack-api-wrapper/blob/main/README.md"
Repository = "https://github.com/theolujay/paystack-api-wrapper"
Documentation = "https://github.com/theolujay/paystack-api-wrapper/blob/main/docs/USAGE.md"
"Bug Tracker" = "https://github.com/theolujay/paystack-api-wrapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["paystack"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--tb=short", "--cov=paystack", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39'] 

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]